--- a/templates/users/choose_avatar.html
+++ b/templates/users/choose_avatar.html
@@ -1,4 +1,4 @@
-{% extends "users/sidebar_base.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% block content %}
 <h3>Choose a Default Avatar</h3>
