--- a/templates/users/edit_profile.html
+++ b/templates/users/edit_profile.html
@@ -1,4 +1,4 @@
-{% extends "users/sidebar_base.html" %}
+{% extends "base.html" %}
 {% block content %}
 <div class="card shadow-sm p-4">
   <h3 class="mb-4">Edit Profile</h3>
